--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -259,7 +259,7 @@ glm(y ~ x1 + x2, family = binomial(), data = dat)
 ::: 
 
 ::: voice-father
-お父さん「そうだね。Rの中では、この式がデザイン行列Xに変換されてる」
+お父さん「そうだね。Rの中では、この式がデザイン行列$X$に変換されてる」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
@@ -269,7 +269,7 @@ X <- model.matrix(~ x1 + x2, data = dat)
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
-お父さん「ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列Xを作っている。Xの最初の列はすべて1になる。これは回帰直線でいう切片に対応している。次の列以降はx1とx2に対応する値が計算される。こうしておくと、たとえばx1が文字列でも数値に置き換えて計算できたり、回帰係数との掛け算が行列として計算できたり、なにかと都合がいい。ここまで覚えなくていいけど、仕組みを知っておくと理解が進むでしょ」
+お父さん「ちょっとマニアックだけど、Rの内部では、`model.matrix()`っていう関数で、デザイン行列Xを作っている。$X$の最初の列はすべて1になる。これは回帰直線でいう切片に対応している。次の列以降はx1とx2に対応する値が計算される。こうしておくと、たとえばx1が文字列でも数値に置き換えて計算できたり、回帰係数との掛け算が行列として計算できたり、なにかと都合がいい。ここまで覚えなくていいけど、仕組みを知っておくと理解が進むでしょ」
 ::: 
 
 ::: voice-daughter
@@ -298,14 +298,14 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 
 - yの確率分布
 - yの分散
-- その確率分布にあったリンク関数
+- その確率分布にあった**リンク関数（link function）**
 
 ::: voice-daughter
 私「リンク関数ってなんだ？」
 ::: 
 
 ::: voice-father
-お父さん「リンク関数（link function）は、**平均をどう変換して回帰係数×共変量にあわせるか**だよ。`family = binomial()`は、デフォルトでロジット関数というリンク関数を使っている。ロジット関数が、2項分布の構造にあった"自然な"リンク関数なんだ。これがロジスティック回帰だよ」
+お父さん「リンク関数は、**平均をどう変換して回帰係数×共変量にあわせるか**だよ。`family = binomial()`は、デフォルトでロジット関数というリンク関数を使っている。これがロジスティック回帰だよ」
 ::: 
 
 ::: voice-daughter
