--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -197,7 +197,7 @@ Keywords: binary outcome, effect measure, generalized linear model
 ::::::::::::::::::::::::::::::::: 
 
 
-::: {.callout-note appearance="simple" title="個人のリスクと共変量"}
+::: {.callout-note appearance="simple" title="ロジスティック回帰"}
 
 $N$人の対象者に番号をつけて$i=1,...,N$で表すことにします。個人$i$のリスクを$\pi_i$で表します。$\pi_i$は、個人レベルの$N$個のパラメータですが、そのすべてを別々に推定したいわけではありません。$\pi_i$に関連する$p-1$個の共変量$X_{i,1},X_{i,2},...,X_{i,p-1}$が測定されており、両者の関連の強さに関心があるとします。このとき
 
@@ -222,7 +222,7 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
 ::: 
 
 ::: voice-father
-お父さん「よかった。ちょっと補足するとね、確率分布に含まれる未知数のことを、統計学ではパラメータと呼んでいる。そしてパラメータの関数として、確率分布を書くことができるものを、パラメトリックモデルっていうんだ。こういう風に考えると、パラメータを推定したり、推定値に信頼区間をつけたりすることが、統計解析の目標になるよね。もうひとつ知っておいてほしいのが、アウトカムと共変量の関係は、ロジット関数で結びつくと仮定していること。`glm()`について話したの覚えてる？」
+お父さん「よかった。ちょっと補足するとね、確率分布に含まれる未知数のことを、統計学ではパラメータと呼んでいる。そしてパラメータの関数として、確率分布を書くことができるものを、パラメトリックモデルっていうんだ。こういう風に考えると、パラメータを推定したり、推定値に信頼区間をつけたりすることが、統計解析の目標になるよね。もうひとつ知っておいてほしいのが、ロジスティック回帰では、アウトカムと共変量の関係が**ロジット関数（logit）**で結びつくと仮定していること。`glm()`について話したの覚えてる？」
 ::: 
 
 ::: voice-daughter
@@ -238,11 +238,11 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
 
 ::: {.callout-note appearance="simple" title="リンク関数とロジット関数"}
 
-個人レベルのパラメータと共変量との関係を結びつける1対1の単調な変換
+個人のパラメータと共変量との関係を結びつける1対1の単調な変換
 
 $g(\pi_i)=\beta_0+\beta_1X_{i,1}+...+\beta_{p-1}X_{i,p-1}$
 
-のことを、一般にリンク関数（link function）といいます。ロジスティック回帰のリンク関数は、定義で述べた通り
+のことを、一般に**リンク関数（link function）**といいます。ロジスティック回帰のリンク関数は
 
 $g(\pi_i)=\log(\frac{\pi_i}{1-\pi_i})$
 
@@ -250,6 +250,9 @@ $g(\pi_i)=\log(\frac{\pi_i}{1-\pi_i})$
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
+
+### ロジット関数の特徴
+
 ::: voice-daughter
 私「単に関数に名前をつけただけでしょ。もうちょっと解説が欲しいなあ」
 ::: 
@@ -281,8 +284,118 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
 ::: 
 
 ::: voice-father
-お父さん「そういうこと。でもね、もっと大事なのは`family`、`y ~ x1 + x2`、`link`を選ぶことで、データの型にあった回帰モデルを指定できるってこと。yとxにそれぞれ連続変数を指定すると、散布図に回帰直線を掛くことができるし、計数データにPoisson回帰を当てはめたりもできる。一般化線型モデルは、生存時間データや経時データ以外ならほとんど対応できる汎用的な統計手法なんだ」
+お父さん「さらに、ロジスティック回帰は、がんサバイバー調査のように群を比較するときにも使われる。シンプルに2人の対象者を比べるとどうなるかって話をするね」
 ::: 
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple" title="ロジット関数とオッズ比の関係"}
+
+共変量が1個のとき、ロジスティック回帰は
+
+$\log \left(\frac{\pi_i}{1-\pi_i}\right)=\beta_0+\beta_1X_{i}$
+
+と表すことができます。そして、対象者$i=1$では$X_{1}=0$、対象者$i=2$では$X_{2}=1$という値をとる状況を考えてみましょう。それぞれの対象者の共変量の値を、上の式に代入すると、以下のようになります。
+
+$\log\left(\frac{\pi_1}{1-\pi_1}\right)=\beta_0$
+
+$\log\left(\frac{\pi_2}{1-\pi_2}\right)=\beta_0+\beta_1$
+
+ここで、$\pi_1$は対象者1の確率パラメータ、$\pi_2$は対象者2の確率パラメータです。これらの確率パラメータから、オッズ比を求めるとどうなるでしょうか。それは、以下の式で計算されます。
+
+$\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\beta_0+\beta_1)\div \exp(\beta_0)=\exp(\beta_1)$
+
+この結果は、回帰係数$\beta_1$の指数をとるとオッズ比が得られることを意味しています。
+
+:::
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「なるほど、回帰係数からオッズ比を計算できるってこういうことなのね」
+::: 
+
+::: voice-father
+お父さん「このオッズ比の計算ができるのは、ロジット関数の特徴によるものでしょ。だから、ロジスティック回帰はオッズ比のモデルともいえるんだ。リスク比にはリスク比のモデルがあるし、リスク差にはリスク差のモデルがある。大事なのは`family`、`y ~ x1 + x2`、`link`を選ぶことで、データの型にあった回帰モデルを指定できるってこと。yとxにそれぞれ連続変数を指定すると、散布図に回帰直線を掛くことができるし、計数データにPoisson回帰を当てはめたりもできる。一般化線型モデルは、生存時間データや経時データ以外ならほとんど対応できる汎用的な統計手法なんだ」
+::: 
+
+### ロジスティック回帰の可逆性
+::: voice-daughter
+私「でもね、その説明だとみんなロジスティック回帰を使ってる理由にはなってないよね。`link="logit"`より`link="identity"`、つまり変換しなくたっていいじゃない」
+::: 
+
+::: voice-father
+お父さん「それはリスク差のモデルだね。このモデルが悪いわけじゃないんだけど、ロジット関数が選ばれた理由はちゃんとある。データを解析するとき、人工的に変換を加えることがあるよね。たとえば死亡じゃなくて生存をアウトカムにしたり、LDLコレステロールの単位をmg/dLからmmol/Lに変えたり。これは共変量$X_i$のスケール変換のことだよ」
+::: 
+
+::: voice-daughter
+私「ふんふん」
+::: 
+
+::: voice-father
+お父さん「統計学者は、いろいろな回帰モデルのうち、変換に対して不変な構造はなにかって考えた。ここでいう変換は、数学では群作用っていうんだけど、ある変換を加えても意味が変わらない操作のこと。ほら、コインの表裏を入れ替えても、コイン投げの確率の本質に影響しないでしょ。考えた結果、2値アウトカムのモデルでは以下のパーツを使うしかないってことがわかった」
+::: 
+
+- 確率分布: 2項分布（指数型分布族）
+
+- 回帰係数×共変量（線型結合）
+
+- リンク関数: ロジット関数
+
+::: voice-father
+お父さん「ここで出てくるロジット関数は、変換しても**可逆性（invertibility）**を保つ唯一の関数なんだ。たとえば死亡確率を$\pi=0.2$とするよ。このとき生存確率は？$1-\pi=0.8$だよね」
+::: 
+
+::: voice-daughter
+私「うん。当たり前」
+:::
+
+::: voice-father
+お父さん「この"死亡と生存を入れ替える"という操作が群作用のこと。ここで問題にしているのはリンク関数$g$だったよね。確率$\pi$を、リンク関数で別のスケール$g(\pi)$に変換したとする。このとき、死亡と生存を入れ替えても、値が反転するだけで構造が維持されるには$g$はどんな性質を持つべき？」
+:::
+
+::: voice-daughter
+私「値が反転する、って？」
+:::
+
+::: voice-father
+お父さん「つまりこういうこと」
+:::
+
+$$g(1−\pi)=−g(\pi)$$
+
+::: voice-daughter
+私「へ？意味わかんない」
+:::
+
+::: voice-father
+お父さん「さっき、対象者1の$\pi_1$と対象者2の$\pi_2$を比べるとオッズ比が出てきたのを思い出して。あのとき、$g(\pi_1)$と$g(\pi_2)$の差をとっていた。$g$じゃなくてロジット関数そのものを使ったけどね。つまり、$g(\pi)$は差のスケールで死亡リスクを表す尺度なんだ。死亡と生存を入れ替えたら、その尺度は符号反転するはずだよね？」
+:::
+
+::: voice-daughter
+私「なるほど。$g(1−\pi)=−g(\pi)$という関係が成り立つのはなにか探せばいいのね？」
+:::
+
+::: voice-father
+お父さん「もう少し条件がある。$g(\pi)$という尺度に、上限と下限があったら不便だし、ゼロという基準が必要だよね。だから条件を追加する」
+:::
+
+- $g(1−\pi)=−g(\pi)$
+- $\pi$が0に近づけば$g(\pi)$は−∞に向かう
+- $\pi$が1に近づけば$g(\pi)$は∞に向かう
+- $\pi=1/2$を基準にとって$g(1/2)=0$
+
+::: voice-father
+お父さん「この4つの条件を満たす滑らかな関数は、実はほとんどひとつしかない」
+:::
+
+$$g(\pi)=\log \left(\frac{\pi_i}{1-\pi_i}\right)$$
+
+:::
+私「それがロジット関数ってことか。データを人工的に変換しても解析結果が変わらないってこと？」
+:::
+
+:::
+お父さん「あれ、そこまでは説明しなかったけど、その通り。可逆性があるモデルでは、データを変換しても構造もそれに合わせて変わってくれて、本質的に同じ解析結果が得られる。統計手法はね、大半が人間が勝手に決めたものじゃないんだ。数学的な法則性がそっと姿を現しているんだよ」
+:::
 ::::::::::::::::::::::::::::::::: 
 
 
