--- a/jp/effects-3.qmd
+++ b/jp/effects-3.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Effects and time III − Understanding Collapsibility of Effect Measures in Marginal and Stratified Analyses with R
 
 ::: {.serif-block .text-right}
-Keywords: binary outcome, confounding/collapsibility, effect measure, generalized linear model
+Keywords: binary data, confounding/collapsibility, effect measure, generalized linear model
 :::
 
 ------------------------------------------------------------------------
