--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -156,8 +156,8 @@ a:hover {
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.html)
-- [A First Step into Survival and Competing Risks Analysis with R](study-design-3.html)
-- [Outcomes: The Bridge from Data Collection to Analysis]　【12/15公開予定】
+- [Outcomes: The Bridge from Data Collection to Analysis](study-design-3.html)
+- [A First Step into Survival and Competing Risks Analysis with R]　【12/15公開予定】
 - [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys]　【12/22公開予定】
 
 このエピソードのRスクリプト一式は、こちらからダウンロードできます。R パッケージや、ここで紹介した解析手順をもう一度たどってみたい方はぜひ。
