--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Adjusting for Bias V − Simpson's paradox
 
 ::: {.serif-block .text-right}
-Keywords: binary outcome, confounding/collapsibility, effect measure, generalized linear model
+Keywords: binary data, confounding/collapsibility, effect measure, generalized linear model
 :::
 
 ------------------------------------------------------------------------
