--- a/jp/effects-4.qmd
+++ b/jp/effects-4.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Effects and Time IV − When Odds Ratios Approximate Risk Ratios—and When They Fail
 
 ::: {.serif-block .text-right}
-Keywords: binary data, effect measure
+Keywords: bias, effect measure
 :::
 
 ------------------------------------------------------------------------
@@ -172,7 +172,7 @@ Keywords: binary data, effect measure
 :::
 
 ::: voice-father
-お父さん「えーっと、状況によってはそれはよくない。疾患や対象集団によっては、リスクが低いときばかりじゃないからね。最近の論文だと、オッズ比をリスク比の代わりに使うなら、そのままの値じゃなくて、**オッズ比の平方根**を報告した方がいいっていうものもある」
+お父さん「えーっと、状況によってはそれはよくない。疾患や対象集団によっては、リスクが低いときばかりじゃないからね。最近の論文だと、オッズ比をリスク比の代わりに使うなら、そのままの値じゃなくて、**オッズ比の平方根**を報告した方がいいっていう説もある（VanderWeele 2017）」
 :::
 
 ::: voice-daughter
@@ -180,7 +180,7 @@ Keywords: binary data, effect measure
 :::
 
 ::: voice-father
-お父さん「お作法があるわけじゃないんだけど、オッズ比をリスク比の近似として使うことがあるからね。そういうときに限っては、オッズ比の代わりにオッズ比の平方根でもいいんじゃないっていう主張かな。リスク比とオッズ比の使い分けの話をするときは、まずは具体的な計算結果をみた方がわかりやすいと思う」
+お父さん「お作法があるわけじゃないんだけど、オッズ比をリスク比の近似として使うことがあるからね。そういうときに限っては、オッズ比の代わりにオッズ比の平方根でもいいんじゃないっていう主張かな。どっちにしても近似バイアスはそれなりに残るんだけど。リスク比とオッズ比の使い分けの話をするときは、まずは具体的な計算結果をみた方がわかりやすいと思う」
 :::
 ::::::::::::::::::::::::::::::::: 
 
@@ -244,7 +244,7 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 :::
 
 ::: voice-father
-お父さん「ごめんごめん、説明が必要だよね。RRに近いのは、ORとSORのどっちかをみてほしいんだ。さっき話した通り、古い教科書ではオッズ比はリスク比の近似だって教えるけど、実際にいろんな組み合わせで計算すると、そうならないことがある。っていうか、表をみるとRRとOR、結構ずれてない？むしろオッズ比の平方根をとった方が、近い値になるよっていう指摘もあるんだ（VanderWeele 2017）」
+お父さん「ごめんごめん、説明が必要だよね。RRに近いのは、ORとSORのどっちかをみてほしいんだ。さっき話した通り、古い教科書ではオッズ比はリスク比の近似だって教えるけど、実際にいろんな組み合わせで計算すると、そうならないことがある。っていうか、表をみるとRRとOR、結構ずれてない？むしろオッズ比の平方根をとった方がいいんじゃないかって話」
 :::
 
 ::: voice-daughter
@@ -256,11 +256,11 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 :::
 
 ::: voice-daughter
-私「そう？私の周りではオッズ比の方がよく聞くけど？まあ胃がんや大腸がんの研究だと、ハザード比（hazard ratio）をダントツよく使うけど」
+私「そう？私の周りではオッズ比の方がよく聞くけど？まあ胃がんや大腸がんの研究だと、ハザード比をダントツよく使うけど」
 :::
 
 ::: voice-father
-お父さん「オッズ比が出てくるのは疫学の教科書とか国試対策でしょ。あれはケース・コントロール研究を教える都合ってだけだよ。リスクって疾患や死亡が起きる確率そのものでしょ。その差や比を直接とったリスク差・リスク比が基本だって理解しとかないと、単なる暗記になっちゃう。ハザード比は、ハザード関数（hazard function）を理解しないと取扱注意だし、前回話したように、層別などの調整を行うとき、リスク比はとても扱いやすい指標だからね」
+お父さん「オッズ比が出てくるのは疫学の教科書とか国試対策でしょ。あれはケース・コントロール研究を教える都合ってだけだよ。リスクって疾患や死亡が起きる確率そのものでしょ。その差や比を直接とったリスク差・リスク比が基本だって理解しとかないと、単なる暗記になっちゃう。ハザード比は、ハザード関数っていう時間の関数の理解がないと取扱注意だし、前回話したように、層別などの調整を行うとき、リスク比はとても扱いやすい指標だからね」
 :::
 ::::::::::::::::::::::::::::::::: 
 
