--- a/en/Study-design-3.qmd
+++ b/en/Study-design-3.qmd
@@ -152,7 +152,7 @@ a:hover {
 # Study Design III − A First Step into Survival and Competing Risks Analysis with R
 
 ::: {.serif-block .text-right}
-Keywords: clinical trial, outcome, simulation, survival/competing-risk
+Keywords: clinical trial, hypothesis/outcome/population, survival/competing-risk, language/writing
 :::
 
 ------------------------------------------------------------------------
