--- a/jp/effects-2.qmd
+++ b/jp/effects-2.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Effects and Time II − Who Is This Percentage About? Target Populations and Attributable Fractions
 
 ::: {.serif-block .text-right}
-Keywords: binary data, effect measure, observational study, scientific writing
+Keywords: effect measure, hypothesis/outcome/population, observational study, language/writing
 :::
 
 ------------------------------------------------------------------------
