--- a/jp/effects-6.qmd
+++ b/jp/effects-6.qmd
@@ -151,14 +151,12 @@ a:hover {
 # Effects and Time VI − Distinguishing Time-Point, Time-Constant, and Time-Varying Effects
 
 ::: {.serif-block .text-right}
-Keywords: effect measure, R, survival/competing-risk
+Keywords: bias, effect measure, simulation, survival/competing-risk
 :::
 
 ------------------------------------------------------------------------
 
 ### ハザード比が意味を持つとき、持たないとき
-
-
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
@@ -276,6 +274,13 @@ $$
 :::
 ::::::::::::::::::::::::::::::::: 
 
+::: {.callout-note appearance="simple" title="シミュレーションデータにおける時点ごとのリスク比の推定"}
+
+さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、**cifmodeling**パッケージの`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点ごとのリスク比も推定できます。
+
+先ほどのシミュレーションデータを使って、`time.point`を変えた`polyreg()`を当てはめることで、術後5年・10年・20年時点の死亡リスク比を推定します。アウトカム（OS）は`Event(time_os,status_os)`、曝露変数であるストーマの有無は`exposure="stoma"`で指定しています。
+:::
+
 ::: {.callout-note appearance="simple"  collapse="true" title="generate_data()のコードはこちら（データ生成に使用）"}
 ```{r warning=FALSE}
 generate_data <- function(n=200, hr1, hr2) {
@@ -326,12 +331,7 @@ generate_data <- function(n=200, hr1, hr2) {
 ```
 :::
 
-::: {.callout-note appearance="simple" title="シミュレーションデータにおける時点ごとのリスク比の推定"}
-
-さっきの「見えない時計」をデータで眺めてみましょう。以前と同じ、ストーマ造設の有無で死亡のハザードが異なる生存時間データをシミュレーションし、**時点ごとのリスク比（RR）** を推定してみます。**ハザード比**は「時計の速さの比」でしたが、「術後10年時点の死亡リスクは、ストーマあり群が何倍か」のようにリスク比の方が、解釈しやすいこともあります。Cox回帰では時点を通じて1つのハザード比を仮定するのに対して、**cifmodeling**パッケージの`polyreg()`では、時点を通じて一定のリスク比だけでなく、任意の時点ごとのリスク比も推定できます。
-
-先ほどのシミュレーションデータを使って、`time.point`を変えた`polyreg()`を当てはめることで、術後5年・10年・20年時点の死亡リスク比を推定します。アウトカム（OS）は`Event(time_os,status_os)`、曝露変数であるストーマの有無は`exposure="stoma"`で指定しています。
-
+::: {.callout-note appearance="simple" collapse="true" title="Rコードと結果はこちら"}
 ```{r warning=FALSE}
 library(cifmodeling)
 set.seed(46)
@@ -346,7 +346,6 @@ rr_at_20 <- polyreg(nuisance.model=Event(time_os,status_os)~1, exposure="stoma",
                     effect.measure1="RR", time.point=20, outcome.type="survival")
 summary(rr_at_20)
 ```
-
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
