--- a/jp/logistic-regression-4.qmd
+++ b/jp/logistic-regression-4.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Adjusting for Bias IV − Why Logistic Regression Fails in Small Samples
 
 ::: {.serif-block .text-right}
-Keywords: binary data, effect measure, generalized linear model
+Keywords: bias, effect measure, generalized linear model
 :::
 
 ------------------------------------------------------------------------
