--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Study Design III − Outcomes: The Bridge from Data Collection to Analysis
 
 ::: {.serif-block .text-right}
-Keywords: clinical trial, outcome, R, survival/competing-risk
+Keywords: clinical trial, hypothesis/outcome/population, survival/competing-risk, language/writing
 :::
 
 ------------------------------------------------------------------------
