--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Study Design 5 − When Bias Creeps In
 
 ::: {.serif-block .text-right}
-Keywords: observational study, outcome, R, survival/competing-risk, study design
+Keywords: bias, confounding/collapsibility, hypothesis/outcome/population, observational study, simulation, survival/competing-risk, study design
 :::
 ------------------------------------------------------------------------
 
