--- a/jp/truth.qmd
+++ b/jp/truth.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Truth − What Is It That You Want to Know?
 
 ::: {.serif-block .text-right}
-Keywords: causal model, clinical trial, generalized linear model, observational study, study design
+Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, language/writing, probability model
 :::
 
 ------------------------------------------------------------------------
@@ -332,8 +332,6 @@ Keywords: causal model, clinical trial, generalized linear model, observational 
 
 ### This concludes the episode on Truth. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
 
-
-
 ### エピソード、用語集
 
 - [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure](causal-inference-1.html)
@@ -348,8 +346,8 @@ Keywords: causal model, clinical trial, generalized linear model, observational 
 
 - [A Story of Coffee Chat and Research Hypothesis](study-design-1.html)
 - [Data Have Types: A Coffee-Chat Guide to R Functions for Common Outcomes](study-design-2.html)
-- [A First Step into Survival and Competing Risks Analysis with R](study-design-3.html)
-- [Outcomes: The Bridge from Data Collection to Analysis](study-design-4.html)
+- [Outcomes: The Bridge from Data Collection to Analysis](study-design-3.html)
+- [A First Step into Survival and Competing Risks Analysis with R](study-design-4.html)
 - [When Bias Creeps In: Selection, Information, and Confounding in Clinical Surveys](study-design-5.html)
 
 **2. Glossary — 統計学のことば**
