--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -367,7 +367,7 @@ $$g(1−\pi)=−g(\pi)$$
 :::
 
 ::: voice-father
-お父さん「さっき、対象者1の$\pi_1$と対象者2の$\pi_2$を比べるとオッズ比が出てきたのを思い出して。あのとき、$g(\pi_1)$と$g(\pi_2)$の差をとっていた。$g$じゃなくてロジット関数そのものを使ったけどね。つまり、$g(\pi)$は差のスケールで死亡リスクを表す尺度なんだ。死亡と生存を入れ替えたら、その尺度は符号反転するはずだよね？」
+お父さん「さっき、対象者1の$\pi_1$と対象者2の$\pi_2$を比べるとオッズ比が出てきたのを思い出して。あのとき、$g(\pi_1)$と$g(\pi_2)$の差をとっていた。$g$じゃなくてロジット関数そのものを使ったけどね。つまり、$g(\pi)$は差のスケールで死亡リスクがどれくらい高いかを表す尺度なんだ。死亡と生存を入れ替えたらどうなる？$g(-1\pi)$は死亡リスクの低さを意味するよね。つまり、死亡と生存の入れ替えによって、符号反転はするはず」
 :::
 
 ::: voice-daughter
@@ -389,10 +389,12 @@ $$g(1−\pi)=−g(\pi)$$
 
 $$g(\pi)=\log \left(\frac{\pi_i}{1-\pi_i}\right)$$
 
+::: voice-daughter
 :::
 私「それがロジット関数ってことか。データを人工的に変換しても解析結果が変わらないってこと？」
 :::
 
+::: voice-father
 :::
 お父さん「あれ、そこまでは説明しなかったけど、その通り。可逆性があるモデルでは、データを変換しても構造もそれに合わせて変わってくれて、本質的に同じ解析結果が得られる。統計手法はね、大半が人間が勝手に決めたものじゃないんだ。数学的な法則性がそっと姿を現しているんだよ」
 :::
@@ -458,6 +460,10 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 
 これは単位を換算するにはどうすればよいかという問題です。ある共変量*X*の効果は、回帰係数*β*との積（*βX*）で表され、それは共変量の単位によらず一定ですよね。このことに気づくと、答えに近づきます。*X*の単位を定数倍すると、*β*は定数分の一に換算されます。ただし、ロジスティック回帰では、回帰係数からロジット関数を経由してオッズ比を求めるため、単位を換算するには、1/0.02586乗のようにべき乗の操作をすることになります。
 :::
+
+### 文献
+
+- [田中司朗. 医学研究のための因果推論II. Rubin因果モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12271)
 
 ### エピソード、用語集、Rスクリプト
 
