--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -151,7 +151,7 @@ a:hover {
 # Study Design 5 − When Bias Creeps In
 
 ::: {.serif-block .text-right}
-Keywords: bias, confounding/collapsibility, hypothesis/outcome/population, observational study, simulation, survival/competing-risk, study design
+Keywords: bias, confounding/collapsibility, observational study, simulation, survival/competing-risk, study design
 :::
 ------------------------------------------------------------------------
 
@@ -221,6 +221,16 @@ Keywords: bias, confounding/collapsibility, hypothesis/outcome/population, obser
 ::: voice-father
 お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる**。これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく。正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね。結局、情報が偏るとバイアスが生じるのは、ハードなエンドポイントでもソフトなエンドポイントでも同じこと」
 :::
+
+::: {.callout-note appearance="simple"  title="ランダム誤差とバイアス"}
+
+統計学は誤差を扱う学問ですが、臨床研究では**ランダム誤差（random error）**と**バイアス（bias）**を区別することが大切です。ランダム誤差は、基本的にはゼロを中心としたばらつきを想定しています。一方で、得られた推定値が真の値から系統的にずれていることを、バイアスといいます。臨床研究における統計学の目標は、ランダム誤差を制御し、バイアスを可能な限りゼロに近づけることです。
+
+たとえるなら、ランダム誤差は的の中心を狙って矢を放つときのばらつき、バイアスは狙いが中心からずれている状態といえます。競合リスクの扱いを間違ったとき生じるKaplan-Meier曲線のバイアスは、ランダム誤差ではありませんよね。ランダム誤差はサンプルサイズを大きくすることで減少させることができますが、バイアスは研究デザインやデータ収集方法を工夫しないと、解消できません。
+
+![](study-design-5.png)
+:::
+
 
 ### バイアスの分類
 
@@ -349,7 +359,9 @@ Kaplan–Meier曲線とAalen-Johansen曲線は、どちらも`cifmodeling`パッ
 - `status_cir=0` : 打ち切り
 
 以下のRスクリプトでは、最初の`cifplot()`により、再発（`code.event1=1`）に関するAalen-Johansen曲線（`aj_event1`）を出力しています。縦軸は累積発生確率ではなく、1-累積発生確率を選んでいる点にも注意してください（`type.y="surv"`）。そして次の`cifplot()`ではイベントを入れ替えて、再発を経験しない死亡（`code.event1=1`）に関するAalen-Johansen曲線（`aj_event2`）を出力し、`cifpanel()`に用いて2つの図を左右に配置したひとつの図を表示しています。左右の累積発生確率の和に注目してください。この図からは、再発の累積発生確率と（再発を経験しない）死亡の累積発生確率の和は、時間が経つにつれ1に近づくが、1を超えることはないことがわかります。仮に打ち切りがなかったとしたら、再発と（再発を経験しない）死亡のどちらか一方しか生じないため、Aalen-Johansen曲線の和が1を超えないのは自然なことです。
+:::
 
+::: {.callout-note appearance="simple"  collapse="true" title="Rコードと結果はこちら"}
 ```{r}
 # devtools::install_github("gestimation/cifmodeling") #インストールが必要なら実行 
 library(cifmodeling)
@@ -387,7 +399,9 @@ print(aj_panel)
 - `status_cir2=0` : 再発/打ち切り
 
 新しく作ったイベント変数`status_cir1`と`status_cir2`を用いると、再発のKaplan–Meier曲線と（再発を経験しない）死亡のKaplan–Meier曲線を描くことができます。これらのKaplan–Meier曲線を左右に配置した図を、先ほどのAalen-Johansen曲線の図と比べてみてください。先ほどのAalen-Johansen曲線の和とは違い、Kaplan–Meier曲線の和が1を超えてしまって計算が合わないことが読み取れたでしょうか。
+:::
 
+::: {.callout-note appearance="simple"  collapse="true" title="Rコードと結果はこちら"}
 ```{r}
 dat$status_cir1 <- as.numeric(dat$status_cir==1)
 km_event1 <- cifplot(Event(time_cir, status_cir1) ~ stoma,
